--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <title>Preference Scheduler Application</title>
-        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min') }}">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     </head>
     <body>
-        {% block body %}{% endblock %}
+        
         <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}"></script> 
+        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+
+        {% block body %}{% endblock %}
+
+
     </body>
 </html>
