--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,12 +3,22 @@
     <head>
         <title>Preference Scheduler Application</title>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/jsgantt.css') }}">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/jquery.ganttView.css') }}">
     </head>
     <body>
-        
+
+
+        <!--https://gist.github.com/thegitfather/9c9f1a927cd57df14a59c268f118ce86-->
+
+        <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script> 
+        <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}"></script> 
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+        <script src="{{ url_for('static', filename='js/jsgantt.js') }}"></script> 
+        <script src="{{ url_for('static', filename='js/date.js') }}"></script> 
+        <script src="{{ url_for('static', filename='js/jquery.ganttView.js') }}"></script> 
 
         {% block body %}{% endblock %}
 
