--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,26 +2,138 @@
 <html>
     <head>
         <title>Preference Scheduler Application</title>
-        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/semantic.min.css') }}">
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/jsgantt.css') }}">
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/jquery.ganttView.css') }}">
     </head>
     <body>
 
-
         <!--https://gist.github.com/thegitfather/9c9f1a927cd57df14a59c268f118ce86-->
 
         <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script> 
         <script src="https://d3js.org/d3.v5.min.js"></script>
-        <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}"></script> 
+        <script src="{{ url_for('static', filename='js/semantic.bundle.js') }}"></script> 
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
         <script src="{{ url_for('static', filename='js/jsgantt.js') }}"></script> 
         <script src="{{ url_for('static', filename='js/date.js') }}"></script> 
         <script src="{{ url_for('static', filename='js/jquery.ganttView.js') }}"></script> 
 
-        {% block body %}{% endblock %}
 
+        <!-- Navication Elements -->
+        <body>
+                
+            <div class="ui grid">
+                <div class="row">
+                  <div class="column" id="sidebar">
+                    <div class="ui secondary vertical fluid menu">
+                      <a class="active item">Overview</a><a class="item">Reports</a><a class="item">Analytics</a><a class="item">Export</a>
+                      <div class="ui hidden divider"></div>
+                      <a class="item">Nav item</a><a class="item">Nav item again</a><a class="item">One more nav</a><a class="item">Another nav item</a><a class="item">More navigation</a>
+                      <div class="ui hidden divider"></div>
+                      <a class="item">Macintosh</a><a class="item">Linux</a><a class="item">Windows</a>
+                    </div>
+                  </div>
+                  <div class="column" id="content">
+                    <div class="ui container grid">
+                 
+
+
+                <!-- CONTENT -->
+                {% block body %}{% endblock %}
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+
+
+         
+
+            <script type='text/javascript'>
+            // showing multiple
+            $('.visible.example .ui.sidebar')
+              .sidebar({
+                context: '.visible.example .bottom.segment'
+              })
+              .sidebar('hide')
+            ;
+            </script>
+         
+         <style type="text/css">
+          body {
+            display: relative;
+          }
+          
+          #sidebar {
+            display:flex;
+            position: fixed;
+            top: 0px;
+            left: 0;
+            bottom: 0;
+            width: 18%;
+            max-width: 250px;
+            background-color: #f5f5f5;
+            padding: 0px;
+            transition: 0.5s;
+          }
+          #sidebar .ui.menu {
+            width: 100%;
+            padding:0em;
+            margin: 2em 0 0;
+            font-size: 16px;
+          }
+          #sidebar .ui.menu > a.item {
+            width: 100%;
+            color: #337ab7;
+            border-radius: 0 !important;
+          }
+          #sidebar .ui.menu > a.item.active {
+            width: 100%;
+            background-color: #337ab7;
+            color: white;
+            border: none !important;
+          }
+          #sidebar .ui.menu > a.item:hover {
+            background-color: #4f93ce;
+            color: white;
+          }
+          
+          #content {
+            margin-left: 19%;
+            width: 81%;
+            margin-top: 3em;
+            padding-left: 3em;
+            float: left;
+          }
+          #content > .ui.grid {
+            padding-right: 4em;
+            padding-bottom: 3em;
+          }
+          #content h1 {
+            font-size: 36px;
+          }
+          #content .ui.divider:not(.hidden) {
+            margin: 0;
+          }
+          #content table.ui.table {
+            border: none;
+          }
+          #content table.ui.table thead th {
+            border-bottom: 2px solid #eee !important;
+          }
+        </style>
+
+        <script>
+        function openNav() {
+              document.getElementById("sidebar").style.width = "250px";
+          }
+
+          function closeNav() {
+              document.getElementById("sidebar").style.width = "0";
+          }
+        </script>
 
     </body>
 </html>
