--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,12 +5,18 @@
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/semantic.min.css') }}">
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/jsgantt.css') }}">
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/jquery.ganttView.css') }}">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/jquery.dataTables.min.css') }}">
     </head>
     <body>
 
         <!--https://gist.github.com/thegitfather/9c9f1a927cd57df14a59c268f118ce86-->
 
-        <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script> 
+        <!-- <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script> -->
+        <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="{{ url_for('static', filename='js/semantic.bundle.js') }}"></script> 
         <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -18,6 +24,8 @@
         <script src="{{ url_for('static', filename='js/jsgantt.js') }}"></script> 
         <script src="{{ url_for('static', filename='js/date.js') }}"></script> 
         <script src="{{ url_for('static', filename='js/jquery.ganttView.js') }}"></script> 
+        <!--<script src="{{ url_for('static', filename='js/jquery.dataTables.min.js') }}"></script> -->
+        <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/b-1.5.2/kt-2.4.0/datatables.min.js"></script>
 
 
         <!-- Navication Elements -->
