--- a/app/templates/admin_shift.html
+++ b/app/templates/admin_shift.html
@@ -218,6 +218,27 @@
                                 modalContentInput_3.value = parseInt(modalContentInput_4.value) + parseInt(modalContentInput_2.value);
                             });
 
+
+                            $('#submit_new_again').on('click',null, function(){
+
+                                var newButton = document.getElementById('submit_new');
+
+                                var modalContentInput_2 = document.getElementById('schema_c2_input');
+                                var modalContentInput_3 = document.getElementById('schema_c3_input');
+                                var modalContentInput_4 = document.getElementById('schema_c4_input');
+
+                                modalContentInput_2.innerText = "";
+                                modalContentInput_3.innerText = "";
+                                modalContentInput_4.innerText = "";
+
+                                newButton.classList.remove('inactive');
+                                newButton.classList.add('active');
+
+                                this.classList.remove('active');
+                                this.classList.add('inactive');
+
+                            });
+
                             // send the edited data to the server as a new shift
                             $("#submit_new").on('click', null, function(){
                                 postData('/test_shift_delete/', {
@@ -231,29 +252,21 @@
                                     {
                                         // if delete was successfull redraw the table
                                         table.draw()
+
+                                        var newButton = document.getElementById('submit_new');
+                                        var newButtonAgain_local = document.getElementById('submit_new_again');
+
                                         alert("shift successfully added")
                                         newButton.classList.remove('active');
-                                        newButton.classList.add('innactive');
-                                        newButtonAgain.classList.remove('inactive');
-                                        newButttonAgain.classList.add('active');
+                                        newButton.classList.add('inactive');
+                                        newButtonAgain_local.classList.remove('inactive');
+                                        newButtonAgain_local .classList.add('active');                                  
+
 
                                     }else{
                                         // if delete was not a success warn us
                                         alert('The server encountered an error adding this item');
                                     }
-                                    
-                                $('#submit_new_again').on('click',none, function(){
-                                        modalContentInput_2.innerText = "";
-                                        modalContentInput_3.innerText = "";
-                                        modalContentInput_4.innerText = "";
-                                        
-                                        newButton.classList.remove('innactive');
-                                        newButton.classList.add('active');
-                                        newButtonAgain.classList.remove('active');
-                                        newButttonAgain.classList.add('innactive');
-
-                                    });
-
                                 });
                             });
                             
