--- a/app/static/css/admin_employee.css
+++ b/app/static/css/admin_employee.css
@@ -49,7 +49,8 @@
 }
 
 .form {
-    padding: 40px;
+    padding-top: 40px;
+    padding-bottom: 60px;
     max-width:400px;
     width: 100%;
     margin:40px auto;
@@ -62,34 +63,51 @@
     font-size: 30px;
     font-weight: 300;
     margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 30px;
 }
 
 .form-content-container {
     border: medium none !important;
     margin: 0 0 10px;
     min-width: 100%;
-    padding: 0;
+    padding-right: 10px;
     width: 100%;
+    overflow-y: scroll;
+    max-height: 500px;
 }
 
 .form-content-container input[type="text"],
 .form-content-container input[type="email"],
 .form-content-container input[type="tel"],
 .form-content-container input[type="url"],
+.form-content-container input[type="date"],
 .form-content-container select,
 .form-content-container textarea {
+  max-height: 200px;
   width: 100%;
+  height: 100%;
   border: 1px solid #ccc;
   background: #FFF;
   margin: 0 0 5px;
   padding: 10px;
 }
 
-.name {
-    max-width: 184.5px !important;
+.form-content-container input[type="date"]{ 
+    height: 40px;
+}
+
+.form-content-container p {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.form-row-input > .half {
+    max-width: 174.5px !important;
     padding-left: 5px !important; 
     padding-right: 5px !important;
-    margin: 0 0 0;
+    margin: 0 0 0 0;
 }
 
 .form button {
