init add/edit/delete employee route methods

--- a/app/static/css/admin_employee.css
+++ b/app/static/css/admin_employee.css
@@ -94,6 +94,11 @@
   padding: 10px;
 }
 
+.form-content-container select[multiple]{
+    max-height:100%;
+    height: 100%;
+}
+
 .form-content-container input[type="date"]{ 
     height: 40px;
 }
