--- a/app/static/css/admin_employee.css
+++ b/app/static/css/admin_employee.css
@@ -15,10 +15,11 @@
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 5% auto auto auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 500px; /* Could be more or less, depending on screen size */
+    max-height: 90%;
 }
 
 /* The Close Button */
@@ -75,7 +76,8 @@
     padding-right: 10px;
     width: 100%;
     overflow-y: scroll;
-    max-height: 500px;
+    height: 100%;
+    max-height: 100%;
 }
 
 .form-content-container input[type="text"],
@@ -108,16 +110,23 @@
     margin-bottom: 5px;
 }
 
+.form-row-input {
+    display: inline-flex;
+    flex-direction: row;
+    width:100%;
+    max-width: 100%;
+}
+
 .form-row-input > .half {
-    max-width: 174.5px !important;
-    padding-left: 5px !important; 
-    padding-right: 5px !important;
+    max-width: 50%;
+    /*padding-left: 5px !important; 
+    padding-right: 5px !important; */
     margin: 0 0 0 0;
 }
 
 .form button {
     width: 100%;
-    height: 100%;
+    height: 60px;
     padding: 10px 10px;
     background: #337ab7;
     font-size: 1em;
@@ -125,7 +134,7 @@
     display: block;
     border: none;
     margin-top: 20px;
-    position: absolute;
+    position: relative;
     left: 0;
     bottom: 0;
     max-height: 60px;
